# blue-archive

./: .eslintrc  .gitignore  .gitmodules  .lintstagedrc.js  .lintstagedrc.mjs  .prettierignore  .prettierrc.json  README.md  README_EN.md  eslint.config.mjs  rush.json  sweep.yaml  uno.config.ts
.cursor/rules/: code-guidelines.mdc  vue-components.mdc
.github/: issue-checker.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  deploy-eden-docs.yml  deploy-gh-pages.yml  deploy-toolbox.yml  deploy-viewer-next.yml  deploy-website-preview.yml  deploy-website.yml  deploy.yml  issue-checker.yml  publish.yml
apps/ba-online-toolbox/: .eslintrc.json  .gitignore  .prettierrc.json  README.md  components.d.ts  index.html  package.json  uno.config.ts  vite.config.ts
apps/ba-story-editor/: .eslintrc  README.md  auto-imports.d.ts  components.d.ts  cypress.config.ts  index.html  package.json  should_not_lint.ts  tsconfig.json  vite.config.ts
apps/blue-archive-story-editor/: .commitlintrc.js  .editorconfig  .eslintignore  .eslintrc-auto-import.json  (+12 more)
apps/blue-archive-story-editor/backend/: .gitignore  pyproject.toml
apps/blue-archive-story-editor/backend/app/: config.py  db.py  dependencies.py  main.py  model.py  storage.py
apps/blue-archive-story-editor/backend/app/api/: __init__.py  story_work.py  story_works.py  uploads.py  users.py
apps/blue-archive-story-editor/backend/app/models/: story_works.py  uploads.py  users.py
apps/blue-archive-story-editor/backend/app/schemas/: story_works.py  users.py
(+2408 files in other folders)
