[tool.poetry]
name = "plana-studio-backend"
version = "0.1.0"
description = ""
authors = ["notnotype <notnotype@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "~2.6.4"
fastapi = "^0.110.1"
uvicorn = "^0.29.0"
odmantic = "^1.0.1"
loguru = "^0.7.2"
icecream = "^2.1.3"
python-multipart = "^0.0.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
